Fixed logo on medium devices and fixed the horizontal scroll issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -468,9 +468,15 @@ header{
     float: left; /* Align the logo to the left */
 }
 
+@media (min-width: 768px) and (max-width: 950px) {
+    .img_logo {
+        max-width: 15%;
+    }
+}
+
 @media (max-width: 768px) {
     .img_logo {
-        max-width: 40%;
+        max-width: 30%;
     }
 }
 
